fixes as per the list provided by Ram
1. icons updated
2. input cursor issue overlapped on navigation fixed
3. logo issue in IE fixed
4. build watch and reload for files under 'src'

--- a/application/assets/scss/base/_icons.scss
+++ b/application/assets/scss/base/_icons.scss
@@ -60,12 +60,17 @@ $iconsFont: "../fonts/icon-fonts";
 .f-icon__nav-refresh:before { content: "\f109"; }
 .f-icon__nav-reports:before { content: "\f10a"; }
 .f-icon__nav-shelter:before { content: "\f10b"; }
+.f-icon__nav-shelteree:before { content: "\f120"; }
 .f-icon__nav-transport:before { content: "\f10c"; }
 .f-icon__nav-user:before { content: "\f10d"; }
 .f-icon__next:before { content: "\f118"; }
 .f-icon__not-reported:before { content: "\f119"; }
+.f-icon__print:before { content: "\f121"; }
+.f-icon__reports:before { content: "\f122"; }
 .f-icon__save:before { content: "\f10e"; }
 .f-icon__search:before { content: "\f11a"; }
 .f-icon__showall:before { content: "\f11b"; }
+.f-icon__step-complete:before { content: "\f123"; }
+.f-icon__step-review:before { content: "\f124"; }
 .f-icon__success:before { content: "\f11c"; }
 .f-icon__upload:before { content: "\f11e"; }
