--- a/application/src/modules/baseModule/appLogo/_component.scss
+++ b/application/src/modules/baseModule/appLogo/_component.scss
@@ -16,6 +16,7 @@
         background-repeat: no-repeat;
         text-indent: -9999px;
         min-width: 125px;
+        display: inline-block;
     }
 }
 
